gcc/testsuite/gdc.test/runnable/imports/a14992.d
module imports.a14992;

struct S1 { }

struct S2 { int v; int[] a; }
