gcc/testsuite/gdc.test/fail_compilation/imports/diag12598a.d
module imports.diag12598a;

struct lines { }
